# markpad

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml  redaction-report.txt
openspec/changes/add-markdown-web-server-cli/: design.md  proposal.md  tasks.md
openspec/changes/add-markdown-web-server-cli/specs/diagram-block-rendering/: spec.md
openspec/changes/add-markdown-web-server-cli/specs/markdown-cli-installation/: spec.md
openspec/changes/add-markdown-web-server-cli/specs/markdown-file-index/: spec.md
openspec/changes/add-markdown-web-server-cli/specs/markdown-live-editor/: spec.md
openspec/changes/add-markdown-web-server-cli/specs/markdown-web-server-cli/: spec.md
skills/markpad-cli/: SKILL.md
skills/markpad-cli/agents/: openai.yaml
src/markpad/: __init__.py  cli.py  files.py  models.py  ports.py  renderer.py  server.py
src/markpad/static/: app.js  index.html  styles.css
tests/: test_cli.py  test_files.py  test_install_script.py  test_ports.py  test_renderer.py  test_server.py
